objects/ChangeLog__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Object to track all Work Request change log data.</description>
    <fields>
        <fullName>ChangeDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeDocumentedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Documented By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <formula>If( OR(ISPICKVAL( RequestStatus__c ,&apos;Approved&apos;),ISPICKVAL( RequestStatus__c ,&apos;Approved without Job&apos;)),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegotiatedDate__c</fullName>
        <description>Change Log Approvers will use this field to populate data in PLC job</description>
        <label>Negotiated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Formula field for Owner so that end user can&apos;t change owner manually</description>
        <formula>If( BEGINS(Owner:User.Id, &apos;005&apos;)  ,HYPERLINK(&quot;/&quot; &amp;OwnerId, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName,&apos;_self&apos;),
HYPERLINK(&quot;/lightning/setup/Queues/page?address=%2Fp%2Fown%2FQueue%2Fd%3Fid%3D&quot; &amp;  Owner:Queue.Id  ,  Owner:Queue.QueueName ,&apos;_self&apos;))</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Change Logs</relationshipLabel>
        <relationshipName>ChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLCStartDate__c</fullName>
        <description>Start Date of PLC Job, to be auto populated to PLC on Approval</description>
        <label>PLC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductionComments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Production Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Programmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestStatus__c</fullName>
        <description>Picklist value of Status for Work request form</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved without Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevisedRequestDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Revised Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDateTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team1__c</fullName>
        <description>Field is used for Change Log approvers to input PLC job Programmers team data</description>
        <label>Programmer&apos;s Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aftersales-Chrysler</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>ESS-Delivery</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>MCM-Analytics</fullName>
                </value>
                <value>
                    <fullName>MCM-Marketing Databases</fullName>
                </value>
                <value>
                    <fullName>MCM-Market Research</fullName>
                </value>
                <value>
                    <fullName>MCM-Target Marketing Services</fullName>
                </value>
                <value>
                    <fullName>MEL-Delivery</fullName>
                </value>
                <value>
                    <fullName>MR-Aftermarket</fullName>
                </value>
                <value>
                    <fullName>MR-Commercial</fullName>
                </value>
                <value>
                    <fullName>MR-Loyalty</fullName>
                </value>
                <value>
                    <fullName>MR-Market Reporting BI</fullName>
                </value>
                <value>
                    <fullName>MR-Network Management</fullName>
                </value>
                <value>
                    <fullName>Planning Solutions</fullName>
                </value>
                <value>
                    <fullName>PolkConnect Analytics</fullName>
                </value>
                <value>
                    <fullName>PolkConnect System</fullName>
                </value>
                <value>
                    <fullName>VIN-Recall</fullName>
                </value>
                <value>
                    <fullName>VIN-VIN Decoders</fullName>
                </value>
                <value>
                    <fullName>VIN-VVS</fullName>
                </value>
                <value>
                    <fullName>Visualization Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WRStatus__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>text(WorkRequestForm__r.RequestStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Change Logs</relationshipLabel>
        <relationshipName>ChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Log</label>
    <listViews>
        <fullName>APACWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC WRF</label>
        <queue>APACWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AustraliaWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia WRF</label>
        <queue>AustraliaWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Autonews_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Autonews</label>
        <queue>Autonews</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CanadaProduction_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EuropeanWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>European WRF</label>
        <queue>EuropeanWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JeffAllen_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Jeff Allen</label>
        <queue>JeffAllen</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCMAnalytics_ChangeLog</fullName>
        <columns>NAME</columns>
        <columns>ProductionComments__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>WorkRequestForm__c</columns>
        <filterScope>Queue</filterScope>
        <label>PAS</label>
        <queue>MCMAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingAnalytics_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Analytics</label>
        <queue>MarketReportingAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingCAP_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - CAP</label>
        <queue>MarketReportingCAP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingLoyalty_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Loyalty</label>
        <queue>MarketReportingLoyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingOEMStat_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - OEM Stat</label>
        <queue>MarketReportingOEMStat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PlanningSolutions_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Planning Solutions</label>
        <queue>PlanningSolutions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PolkConnectAnalytics_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>PolkConnect Analytics</label>
        <queue>PolkConnectAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <recordTypes>
        <fullName>Change_Log</fullName>
        <active>true</active>
        <description>Approval Pending status will not be there inthis record type</description>
        <label>Change Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ApprovalPendingNottoSubmitted</fullName>
        <active>true</active>
        <description>Approval Pending can&apos;t be moved to submitted or to Draft</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND($Permission.WRApprover,
ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Approval Pending&apos;),
OR(ISPICKVAL(RequestStatus__c,&apos;Submitted&apos;),
ISPICKVAL(RequestStatus__c,&apos;Draft&apos;)
)
)
)</errorConditionFormula>
        <errorMessage>Status can&apos;t be moved to Draft or Submitted from Approval Pending status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ErrorForApprovalPending</fullName>
        <active>true</active>
        <description>Error when draft or rejected is moved to Approval Pending</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND($Permission.WRApprover,
AND(
OR(ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Draft&apos;) ,ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Rejected&apos;)), 
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)
)
)
)</errorConditionFormula>
        <errorMessage>You can&apos;t move the status to Approval pending from Draft or Rejected status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ErrorForApprovedStatusFromRejected</fullName>
        <active>true</active>
        <description>Shouldn&apos;t move status directly from rejected to approved.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND($Permission.WRApprover,
OR(ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;), ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;)  ),
ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Rejected&apos;)))</errorConditionFormula>
        <errorMessage>Status can&apos;t be moved to Approved or Approved without Job from Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ErrorForNonApprovers</fullName>
        <active>true</active>
        <description>Users without Approve permission must not be able to change the request status other than draft or submitted</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(NOT($Permission.WRApprover) ,
OR(
AND(
ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Draft&apos;) , 
OR(ISPICKVAL(RequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)
)
),
AND(
ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Submitted&apos;) , 
OR(ISPICKVAL(RequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)
)
),
AND(
ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Approval Pending&apos;) , 
OR(ISPICKVAL(RequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Submitted&apos;),
ISPICKVAL(RequestStatus__c,&apos;Draft&apos;)
)
),
ISCHANGED( ProductionComments__c)
)
)
)</errorConditionFormula>
        <errorMessage>You are not authorized to make this change as you are not an approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewRecordStatusDraftOrSubmitted</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,ISBLANK(Id) &amp;&amp; OR (ISPICKVAL(RequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)))</errorConditionFormula>
        <errorMessage>You are not authorized to change to this Request Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductionCommentsRequiredToReject</fullName>
        <active>true</active>
        <description>Production Comments is required to reject the change log</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), 
False,
AND(ISPICKVAL(RequestStatus__c ,&quot;Rejected&quot;), OR(ISPICKVAL(PRIORVALUE(RequestStatus__c) , &quot;Submitted&quot;),ISPICKVAL(PRIORVALUE(RequestStatus__c) ,&quot;Approval Pending&quot;),ISPICKVAL(PRIORVALUE(RequestStatus__c) ,&quot;Rejected&quot;))  ,
OR(ISBLANK(ProductionComments__c), ISNULL(ProductionComments__c) ) ,  $Permission.WRApprover ,!ISBLANK(Id)))</errorConditionFormula>
        <errorMessage>Production comments are required when rejecting a Change Log.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RejectedLogtoSubmitOrDraft</fullName>
        <active>true</active>
        <description>Rejected Log Must be moved to Submitted or Draft</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND(ISPICKVAL(PRIORVALUE(RequestStatus__c),&quot;Rejected&quot;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)))</errorConditionFormula>
        <errorMessage>Please update the status to Submitted or Draft from Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequeststatustoSubmitfromDraft</fullName>
        <active>true</active>
        <description>Request status must be moved to Submit from Draft</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,ISPICKVAL(PRIORVALUE(RequestStatus__c), &apos;Draft&apos;) &amp;&amp;   OR(ISPICKVAL(RequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(RequestStatus__c,&apos;Approval Pending&apos;)
) &amp;&amp; $Permission.WRApprover)</errorConditionFormula>
        <errorMessage>Please move the Request Status to Submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubmittedRecordtoDraft</fullName>
        <active>true</active>
        <description>Submitted or Approval Pending change log must not be moved directly to draft</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), 
False,
ISPICKVAL( RequestStatus__c ,&apos;Draft&apos;) &amp;&amp;  
ISPICKVAL( PRIORVALUE(RequestStatus__c) ,&apos;Submitted&apos;))</errorConditionFormula>
        <errorMessage>Change Log can&apos;t be moved back to Draft.</errorMessage>
    </validationRules>
</CustomObject>